# python-beanstalk-app

./: Dockerfile  README.md  app.py
blomyProject/BE/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy  pyproject.toml
blomyProject/BE/.github/workflows/: deploy-prod.yml  deploy-stage.yml
blomyProject/BE/artifacts/production/: population_rf_routing_metrics.json
blomyProject/BE/config/: cusum_thresholds.json
blomyProject/BE/infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
blomyProject/BE/phora/: __init__.py  main.py
blomyProject/BE/phora/api/: app.py  deps.py
blomyProject/BE/phora/core/: config.py  deploy_guard.py  metrics.py  security.py
blomyProject/BE/phora/db/: base.py  session.py
blomyProject/BE/phora/models/: __init__.py  ai.py  audit.py  billing.py  blog.py  contact.py  cycle.py  enums.py  growth.py  insight.py  notification.py  prediction.py  (+3 more)
blomyProject/BE/scripts/: bootstrap-terraform-backend.sh  deploy-lightsail-prod-admin.sh  deploy-lightsail-stage-admin.sh  deploy-lightsail-stage.sh
blomyProject/BE/tests/: conftest.py  test_age.py  test_ai_chat.py  test_anonymous_registration.py  test_api.py  test_app_release.py  test_apple_health_source.py  test_auth.py  test_billing.py  test_blog_media.py  test_db_compat.py  test_delete_account.py  test_deploy_guard.py  test_email.py  test_firebase_auth.py  test_lh_image_logging.py  test_local_currency_pricing.py  test_notifications.py  test_prediction_builder.py  test_social_auth.py  test_wearable_commerce.py
(+450 files in other folders)
