[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phora-backend"
version = "0.1.0"
description = "Phora backend scaffold with internal ML integration"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
  "alembic>=1.16.4",
  "celery>=5.6.3",
  "redis>=7.4.0",
  "httpx>=0.28.1",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.10.1",
  "python-jose>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
  "argon2-cffi>=23.1.0",
  "mnemonic>=0.21",
  "email-validator>=2.2.0",
  "prometheus-client>=0.24.1",
  "opentelemetry-api>=1.40.0",
  "opentelemetry-sdk>=1.40.0",
  "firebase-admin>=6.5.0",
  "google-auth>=2.40.3",
  "cryptography>=43.0.0",
  "PyJWT[crypto]>=2.10.1",
  "boto3>=1.39.17",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.23.8",
  "numpy>=1.26,<3.0",
  "pillow>=10.0,<12.0",
  "qrcode[pil]>=8.0,<9.0",
  "pypdf>=5.0,<7.0",
  "opencv-python-headless>=4.10,<5.0",
  "scikit-learn>=1.4,<2.0",
  "pgvector>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["phora*", "bloomy_ml*"]

[tool.setuptools.package-data]
phora = ["assets/*.png", "assets/*.conf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
